--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 3,
   "name": "CRXJS Vanilla JS Example",
   "version": "1.0.0",
+  "permissions": ["activeTab", "scripting", "storage"],
   "action": { "default_popup": "src/popup/popup.html" },
   "options_page": "src/options/options.html",
   "background": {
