--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,11 @@
   "options_page": "src/options/options.html",
   "background": {
     "service_worker": "src/background.js"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["src/contentScript.js"]
+    }
+  ]
 }
